# ece493-cms

./: .coverage  .gitignore  AGENTS.md  TC-01.md  TC-02.md  TC-03.md  TC-04.md  TC-05.md  TC-06.md  TC-07.md  TC-08.md  TC-09.md  TC-10.md  TC-11.md  TC-12.md  TC-13.md  TC-14.md  TC-15.md  TC-16.md  TC-17.md  TC-18.md  TC-19.md  TC-20.md  TC-21.md  TC-22.md  TC-23.md  TC-24.md  TC-25.md  TC-26.md  TC-27.md  TC-28.md  TC-29.md  UC-01.md  UC-02.md  UC-03.md  UC-04.md  UC-05.md  UC-06.md  UC-07.md  UC-08.md  (+25 more)
.codex/: auth.json  config.toml  history.jsonl  models_cache.json  state_5.sqlite  state_5.sqlite-shm  version.json
.codex/shell_snapshots/: 019cbb97-579e-78b3-b247-eee325847288.sh
.specify/memory/: constitution.md
docs/: development.md
migrations/: env.py
specs/001-uc-spec-union/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/api/: announcements.py  app.py  assigned_papers.py  auth_login.py  auth_password.py  conference_register.py  decision_notify.py  decision_record.py  manuscript_upload.py  payment_confirmation.py  referee_assign.py  referee_workload.py  registration_payment.py  registration_prices.py  registration_validation.py  review_access.py  review_invite_notify.py  review_invite_response.py  review_submit.py  routes.py  schedule_edit.py  schedule_generate.py  schedule_modify.py  schedule_notify.py  schedule_publish.py  schedule_view.py  schedule_view_attendee.py  submission_create.py  submission_save.py  three_referees.py  user_registration.py
src/config/: settings.py
src/models/: announcement.py  base.py  decision.py  (+10 more)
(+166 files in other folders)
